tests/fixtures/syntax/valid/single_line_assertion_no_space_after_brace.repor
case "single line no brace space" {
  $ true
  assert {exit 0}
}
