tests/fixtures/syntax/invalid/comment_splits_assert_keyword.repor
case "x" {
  $ true
  assert # comment splits assert from its opening brace
  {
    exit 0
  }
}
